refactor: optimize SplitService group balance calculation and enhance expense creation logic